Fix: modals weren't scrollable on mobile

--- a/represent-map/mobile.css
+++ b/represent-map/mobile.css
@@ -55,6 +55,7 @@ body
 #modal_info,
 #modal_add
 {
+  position: absolute;
   margin: 10px 0px;
   top: 0;
 }
